--- a/styles.css
+++ b/styles.css
@@ -16,4 +16,7 @@ h1 {
     border: 0;
     background-color: #3d692c;
     color: white;
+    padding: 10px 20px;
+    margin-top: 25px;
+    border-radius: 5px;
 }
